--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 
 {
-  "name": "zeus-cce-elite",
+  "name": "zeusapp",
   "private": true,
-  "version": "5.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,21 +11,15 @@
   },
   "dependencies": {
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.0",
-    "@google/genai": "^1.35.0",
-    "recharts": "^2.15.0",
-    "clsx": "^2.1.1",
-    "tailwind-merge": "^2.5.0"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "vite": "^6.0.0",
-    "@vitejs/plugin-react": "^4.3.4",
     "typescript": "^5.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "@vercel/node": "^3.0.0"
   }
 }
