--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "zeusapp",
   "private": true,
@@ -6,20 +5,24 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build"
     "preview": "vite preview"
   },
   "dependencies": {
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^6.22.3",
+    "recharts": "^2.12.4"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
+    "@types/node": "^25.0.9",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
-    "@vercel/node": "^3.0.0"
+    "typescript": "^5.0.0",
+    "vite": "^5.1.4"
   }
 }
