--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -15,14 +15,13 @@
     "recharts": "^2.12.4"
   },
   "devDependencies": {
-    "@types/node": "^25.0.9",
+    "typescript": "^5.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
+    "vite": "^5.1.4",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5.0.0",
-    "vite": "^5.1.4"
+    "postcss": "^8.4.38",
+    "autoprefixer": "^10.4.19"
   }
 }
